--- a/src/scanner/Makefile.am
+++ b/src/scanner/Makefile.am
@@ -8,3 +8,6 @@ BUILT_SOURCES = scl.h scl.c
 
 libsclcscanner_a_SOURCES = scanner.c scanner.h scl.y scl.l
 libsclcscanner_a_CPPFLAGS = -I$(top_srcdir)/src
+
+mostlyclean-local:
+	-rm scl.h scl.c
